--- a/css/header.css
+++ b/css/header.css
@@ -1,77 +1,107 @@
-.hero {
-    overflow: hidden;
-    margin-bottom: 60px;
-
+.header {
+  margin-bottom: 80px;
 }
-.hero__illustration {
-    position: absolute;
-    top: 25%;
-    right: 105px;
-    z-index: -1;
+
+.header__menu {
+  
+  display: none;
+}
+
+.header__container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 20px;
+}
+
+.header__nav {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header__nav ul {
+  display: flex;
+}
+
+.header__nav_item a {
+  padding-right: 35px;
+  font-weight: 500;
+  font-size: var(--font-size-md);
+  color: rgb(11, 11, 12);
+  opacity: 0.5;
+  transition: 0.2s;
+}
+
+.header__button {
+  font-size: var(--font-size-md);
+  font-family: var(--inter);
+  font-weight: 500;
+  width: 132px;
+  height: 44px;
+  background-color: #fff;
+  color: rgb(7, 5, 3);
+  border: 1px ;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.header__button:nth-of-type(2) {
+  margin-left: 18px;
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    position: fixed;
+    left: 0;
+    right: 0;
+    background-color: #fff;
+    z-index: 10;
   }
 
-
-  .header{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-   
-color: #6a79d5;
-}
+  .header__menu {
+    display: block;
+    
+  }
 
   .header__container {
-    display: flex;
-    align-items: center;
-    padding-top: 20px;
+    justify-content: space-between;
+    padding: 10px 10px 10px 10px;
   }
-  
-  .header__logo {
-    padding-right: 360px;
+
+  .header__button {
+    display: none;
   }
-  
 
-.header_nav ul {
-    display: flex;
-    
-}
+  .header__nav {
+    background: #bbc8ba;
+    position: fixed;
+    top: 64px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin-top: 0;
+    clip-path: circle(0 at top left);
+    transition: clip-path 0.9s ease-in;
+  }
 
-.heder_nav_item {
-    margin-right: 34px;
-    font-size: 16px;
-    line-height: 19px;
-    
+  .header__nav.open {
+    clip-path: circle(1000px at top);
+  }
 
-}
+  .header__nav ul {
+    flex-direction: column;
+    height: 100%;
+    margin: 0 auto;
+  }
 
-.header_login1{
-    width: 132px;
-    height: 40px;
-    margin-right: 34px;
-    border: 1px solid #FB8F1D;
-    box-sizing: border-box;
-    border-radius: 8px;
-    color: #FB8F1D;
-    
-    
-}
-.header_login2{
-    margin-right: 34px;
-    border-color: #FB8F1D;
-    
-    background: #FB8F1D;
-    border-radius: 8px;
-    color: #FFFFFF;
-    width: 132px;
-    height: 40px;
-}
+  .header__nav .header__nav_item {
+    padding-top: 8vh;
+    flex: 1;
+  }
 
-.header_title{
-
-    width: 46px;
-    height: 19px;
+  .header__nav a {
     font-weight: 500;
-    font-size: 16px;
-    line-height: 19px;
-    color: #6d7073;
-    
+    font-size: 26px;
+  }
 }
