--- a/css/globals.css
+++ b/css/globals.css
@@ -1,7 +1,6 @@
-@import "../typography/colors.css";
-@import "../typography/fonts.css";
-@import "./animations.css";
-@import "./intro.css";
+body {
+  font-family: var(--inter);
+}
 
 .container {
   margin: 0 auto;
@@ -9,43 +8,41 @@
   width: 100%;
 }
 
-@media screen and (min-width: 2560px) {
-  .container {
-    max-width: 1100px;
-  }
+fieldset {
+  border: none;
 }
 
-@media screen and (max-width: 1024px) {
-  .container {
-    max-width: 984px;
-  }
+label,
+input {
+  display: block;
+  font-size: 24px;
+  font-weight: 600;
 }
 
-@media screen and (max-width: 768px) {
-  body {
-    text-align: center;
-  }
-
-  .container {
-    max-width: 730px;
-  }
+label {
+  padding-bottom: 0.5rem;
 }
 
-@media screen and (max-width: 450px) {
-  :root {
-    font-size: 12px;
-  }
+input {
+  border: 2px solid rgba(26, 106, 138, 0.4);
+  border-radius: 3px;
+  font-weight: 400;
 }
 
-@media screen and (max-width: 320px) {
-  .container {
-    max-width: 300px;
-  }
+legend {
+  font-size: 36px;
+  font-weight: bold;
 }
 
-a {
-  text-decoration: none;
-  color: var(--dark-blue);
+button {
+  font-weight: 500;
+  width: 8em;
+  font-size: var(--font-size-md);
+  padding: 0.75rem 0;
+  border: none;
+  background-color: #0d39bf;
+  border-radius: 0.25rem;
+  color:Ghostwhite;
 }
 
 li {
