--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,7 @@
-@import "./normalize.min.css";
-@import "./../typography/colors.css";
-@import "./../typography/fonts.css";
-
 @import "./globals.css";
 @import "./header.css";
-@import "./hero.css";
-@import "./features.css";
-@import "./footer.css";
+@import "./form.css";
+@import "./content.css";
+@import "./delete.css";
+@import "./card.css";
+@import "../typography/fonts.css"; 
